--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.2"
+axum = { version = "0.6.2", features = ["ws"] }
 axum-extra = { version = "0.4", features = ["spa"] }
 tokio = { version = "1.24.1", features = ["full"] }
 tera = "1"
@@ -15,3 +15,4 @@ serde = { version= "1", features = ["derive"] }
 fastrand = "1"
 enum-iterator = "1"
 parking_lot = "0.12"
+serde_json = "1"
