--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ fastrand = "1"
 enum-iterator = "1"
 parking_lot = "0.12"
 serde_json = "1"
+tower-http = { version = "0.3.5", features = ["catch-panic"] }
