--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tera = "1"
 once_cell="1"
 serde = { version= "1", features = ["derive"] }
 fastrand = "1"
-parking_lot = "0.12"
 serde_json = "1"
 tower-http = { version = "0.3.5", features = ["catch-panic"] }
+futures = "0.3.25"
+async-mutex = "1.4.0"
