--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ serde_json = "1"
 tower-http = { version = "0.3.5", features = ["catch-panic"] }
 futures = "0.3.25"
 async-mutex = "1.4.0"
+nanoid = "0.4"
+nutype = {version ="0.1.1", features = ["serde1"]}
